# exercism

./: README.md
rust/: Cargo.toml  rustc-ice-2024-04-05T01_54_03-3588.txt
rust/acronym/: Cargo.toml
rust/acronym/.exercism/: metadata.json
rust/acronym/src/: lib.rs
rust/acronym/tests/: acronym.rs
rust/all-your-base/.exercism/: metadata.json
rust/all-your-base/src/: lib.rs
rust/all-your-base/tests/: all-your-base.rs
rust/allergies/: Cargo.toml
rust/allergies/.exercism/: metadata.json
rust/allergies/src/: lib.rs
rust/allergies/tests/: allergies.rs
rust/alphametics/: Cargo.toml
rust/alphametics/.exercism/: metadata.json
rust/alphametics/src/: lib.rs
rust/alphametics/tests/: alphametics.rs
rust/anagram/: Cargo.toml
rust/anagram/src/: lib.rs
rust/armstrong-numbers/: Cargo.toml
rust/beer-song/: Cargo.toml
rust/binary-search/: Cargo.toml
rust/bob/: Cargo.toml
rust/bowling/: Cargo.toml
rust/clock/: Cargo.toml
rust/gigasecond/: Cargo.toml
rust/grains/: Cargo.toml
rust/hamming/: Cargo.toml
rust/hello-world/: Cargo.toml
rust/high-scores/: Cargo.toml
rust/isogram/: Cargo.toml
rust/leap/: Cargo.toml
rust/luhn/: Cargo.toml
rust/matching-brackets/: Cargo.toml
rust/minesweeper/: Cargo.toml
rust/nucleotide-count/: Cargo.toml
rust/palindrome-products/: Cargo.toml
rust/pangram/: Cargo.toml
rust/poker/: Cargo.toml
rust/proverb/: Cargo.toml
rust/reverse-string/: Cargo.toml
rust/run-length-encoding/: Cargo.toml
rust/space-age/: Cargo.toml
rust/sublist/: Cargo.toml
rust/sum-of-multiples/: Cargo.toml
(+113 files in other folders)
